add relationship between models
